--- a/deploy.yaml
+++ b/deploy.yaml
@@ -8,7 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: nginxapp
   template:
     metadata:
       labels:
